  system profile, "admin", that does not have an entry in site.users, since
  the profile is not used to log into the site but only as a placeholder user
  profile for associating with events generated by the system, usually when
  bootstrapping a new Karl.

- Exclude objects which don't provide IContent from 'texts' catalog index.
  (Only content objects should show up in search.)

3.15 (2009-12-14)
-----------------

- LP #496330: Clicking the (+) from the calendar month view now uses
  a default of 9:00am instead of 12:00am.

- LP #494701: Editing a calendar event now populates the form with
  the correct times.

- LP #492346: Clicking the (+) button to add a new event on the calendar
  views now populates a default date and time on the form based on the
  context of where (+) was clicked.

- LP #491991: An event's calendar category is now displayed when
  viewing the event.

- LP #491986: Constrain width of category selector on calendar setup page.

- Increase performance of jQuery selectors in calendar daily/weekly view

- Fix editing of calendar categories/layers when names have spaces

- Calendar categories and layers are now managed on the same setup page.

- Preload button images better so that they don't flickr on hover/click

- Change calendar "Add Event" button to not be an image so that it is easier
  to test and change the label if needed

- Speed up rendering of any page shown inside the community layout by
  roughly 2X.

- LP #444502: Added a sample content generation script.

- "Settings" action on calendar tool now allows the choice of a color
  along with a virtual calendar name.

- Add a new field index named "virtual" to the catalog.  The initial
  use for this index is to be able to query for catalog events
  globally for the purposes of creating a "dynamic" calendar: the
  ``virtual`` index, for catalog events, will be populated with a
  tuple: ``(calendar_path, virtual_calendar_name)``.  This tuple can